--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^6.6.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
+    "redis": "^4.3.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
