--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/bull": "^3.15.9",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.7",
     "@types/supertest": "^2.0.11",
