--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "bull": "^4.10.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cloudinary": "^1.32.0",
+    "compression": "^1.7.4",
     "mongoose": "^6.6.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -48,6 +50,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/bull": "^3.15.9",
+    "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
     "@types/multer": "^1.4.7",
