--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "class-validator": "^0.13.2",
     "cloudinary": "^1.32.0",
     "compression": "^1.7.4",
-    "ejs": "^3.1.8",
     "handlebars": "^4.7.7",
+    "moment": "^2.29.4",
     "mongoose": "^6.6.3",
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
@@ -56,7 +56,6 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/bull": "^3.15.9",
     "@types/compression": "^1.7.2",
-    "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
     "@types/multer": "^1.4.7",
