--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cloudinary": "^1.32.0",
     "compression": "^1.7.4",
     "handlebars": "^4.7.7",
+    "helmet": "^6.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.6.3",
     "nodemailer": "^6.8.0",
