--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.1.4",
     "@nestjs/swagger": "^6.1.2",
+    "@nestjs/websockets": "^9.1.4",
     "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "bull": "^4.10.0",
