--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     ports:
       - '27017:27017'
-    container_name: chatty-nest-db
+    container_name: tuiter-db
     volumes:
       - ./mongodb:/var/lib/postgresql/data
   mongoexpress:
