--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     environment:
       - ME_CONFIG_MONGODB_URL=mongodb://mongo:27017
   redis:
-    image: redis/redis-stack-server:latest
+    image: redis/redis-stack-server:6.2.4-v4
     restart: always
     depends_on:
       - mongo
