--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.0'
 
 services:
   mongo:
-    image: mongo
+    image: mongo:6.0.3
     restart: always
     ports:
       - '27017:27017'
