--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "redis": "^4.3.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-stats": "^0.99.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -65,6 +66,7 @@
     "@types/nodemailer": "^6.4.6",
     "@types/passport-jwt": "^3.0.7",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-stats": "^0.95.6",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
