--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.8.1",
+    "@nestjs/apollo": "^10.1.7",
     "@nestjs/bull": "^0.6.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^10.1.7",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "^9.0.0",
@@ -34,12 +36,14 @@
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/websockets": "^9.1.4",
     "@sendgrid/mail": "^7.7.0",
+    "apollo-server-express": "^3.11.1",
     "bcryptjs": "^2.4.3",
     "bull": "^4.10.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cloudinary": "^1.32.0",
     "compression": "^1.7.4",
+    "graphql": "^16.6.0",
     "handlebars": "^4.7.7",
     "helmet": "^6.0.0",
     "mongoose": "^6.6.3",
